--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"/>
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="../CSS/style.css" rel="stylesheet"/>
+    <!-- <link href="../CSS/style.css" rel="stylesheet"/> -->
     <!-- Font Awesome -->
 <link
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
